--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=TMC2209
 version=8.0.3
-author=Peter Polidoro <peter@polidoro.io>
-maintainer=Peter Polidoro <peter@polidoro.io>
+author=Peter Polidoro <peter@polidoro.io>, Howard Dutton <hjd1964@gmail.com>
+maintainer=Peter Polidoro <peter@polidoro.io>, Howard Dutton <hjd1964@gmail.com>
 sentence=The TMC2209 is an ultra-silent motor driver IC for two phase stepper motors with both UART serial and step and direction interfaces.
 paragraph=Like this project? Please star it on GitHub!
 category=Device Control
-url=https://github.com/janelia-arduino/TMC2209
+url=https://github.com/hjd1964/TMC2209
 architectures=*
