--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
-name=TMC2209
-version=8.0.3
+name=TMC2209Stepper
+version=1.0.0
 author=Peter Polidoro <peter@polidoro.io>, Howard Dutton <hjd1964@gmail.com>
 maintainer=Peter Polidoro <peter@polidoro.io>, Howard Dutton <hjd1964@gmail.com>
 sentence=The TMC2209 is an ultra-silent motor driver IC for two phase stepper motors with both UART serial and step and direction interfaces.
